# HiF4_Sp

./: .gitignore  AGENTS.md  README.md  download_qwen3_5_27b.sh  install.sh  main.py  test.sh
Block_Sparse/: README.md  mlp_128x128_gradient_block_pruning_design_fixed.md
HiFloat4/: README.md  main.py  quantize_qwen3_5_27b.sh
NVFP4/: __init__.py  convert_checkpoint.py  dequantize.py  test_dequantize.py  test_kv_fake.py  test_torch_fake.py  test_vllm_fake_act.py  torch_fake.py  (+1 more)
tools/vbench_i2v_hif4/: README_zh.md  pyproject.toml  requirements-vbench-key-pinned.txt  requirements-vbench.txt
tools/vbench_i2v_hif4/configs/: dimensions_10dim.txt  example_local.yaml
tools/vbench_i2v_hif4/docs/: generation_contract_zh.md  opencode_local_test_plan_zh.md  reproducibility_archive_zh.md  reproducibility_snapshot_zh.md  troubleshooting_zh.md  vbench_asset_checklist_zh.md
tools/vbench_i2v_hif4/examples/slurm_ustc_template/: eval_one_case.sbatch  generate_scale60_array.sbatch  retry_missing_dims.sbatch
tools/vbench_i2v_hif4/hif4_vbench_i2v/: __init__.py  build_eval_inputs.py  build_scale60_full_info.py  constants.py  merge_scale60_outputs.py  preflight.py  repair_exact_repeats.py  retry_missing.py  run_eval_10dim.py  scan_missing.py  summarize_four_variants.py  utils.py  validate_case_input.py  validate_final.py
tools/vbench_i2v_hif4/hif4_vbench_i2v/compat/: __init__.py  patches.py
tools/vbench_i2v_hif4/hif4_vbench_i2v/parallel/: run_parallel_cases.py
tools/vbench_i2v_hif4/scripts/: local_smoke_test.sh  run_eval_one_case.sh  run_preflight.sh  run_summary.sh
(+54 files in other folders)
